add toys index view

--- a/pets_toys/app/views/pets/index.html.erb
+++ b/pets_toys/app/views/pets/index.html.erb
@@ -1,7 +1,7 @@
 <h2>Pets Index</h2>
 
 <ul>
-<% @pets.each do |pet| %>
-  <li><%= link_to(pet.name, pet_toys_path(pet), remote: true, class: "pet-toy-link") %></li>
-<% end %>
+  <% @pets.each do |pet| %>
+    <li><%= link_to(pet.name, pet_toys_path(pet), remote: true, class: "pets-toy-link") %></li>
+  <% end %>
 </ul>
